fix overflow

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 // Specific CSS for your home-page
 .container-homepage {
   height: 100vh;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   background-color: $background;
@@ -29,7 +30,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 130%;
+  width: 100%;
   overflow: hidden;
   line-height: 0;
   transform: rotate(180deg);
